Revert "Merge branch 'ospm-sbranch' into 'main'"

--- a/custom-addons/clearance_request/views/clearance_views.xml
+++ b/custom-addons/clearance_request/views/clearance_views.xml
@@ -4,15 +4,7 @@
     <field name="model">employee.clearance</field>
     <field name="arch" type="xml">
       <form string="Clearance Request">
-      
-        <group>
-          <field name="state" invisible="1"/>
-          <field name="is_department_approve" invisible="1"/>
-          <field name="is_property_approve" invisible="1"/>
-          <field name="is_finance_approve" invisible="1"/>
-          <field name="is_hr_approve" invisible="1"/>
-          <field name="user_in_group" invisible="1"/>
-        </group>
+        <field name="state" invisible="1"/>
         <div class="d-flex justify-content-center align-items-center my-5">
           <div class="card w-75 shadow-lg rounded">
             <div class="card-header text-center bg-primary text-white">
@@ -24,7 +16,7 @@
                 <div class="col-md-6">
                   <label for="employee_id" class="form-label fw-bold">Employee</label>
                   <field name="employee_id" 
-                         readonly="1" 
+                         readonly="0" 
                          class="form-control" 
                          id="employee_id"
                          attrs="{'readonly': [('state', 'in', ['in_progress', 'approved', 'rejected'])]}"/>
@@ -36,7 +28,6 @@
                          class="form-control" 
                          id="department_id"
                          attrs="{'readonly': [('state', 'in', ['in_progress', 'approved', 'rejected'])]}"/>
-                          <!-- to make save button only visible at creation step -->
                 </div>
 
                 <!-- Row 2 -->
@@ -101,21 +92,19 @@
                 <div class="col-md-6 d-flex justify-content-center mt-4">
                   <button name="action_department_approve" 
                           type="object" 
-                          string="Approve" 
+                          string="Approve Department" 
                           class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill"
-                           attrs="{'invisible': ['|',('is_department_approve','=',False),('state', '!=', 'draft')]}" 
-                          />
-                           <!-- to make Approve button only visible at this draft state or if is_department_approve is=True -->
-
+                          groups="clearance_request.group_department_approval"
+                          states="draft"/>
                   <button name="action_reject_department" 
                           type="object" 
-                          string="Reject" 
+                          string="Reject Department" 
                           class="btn btn-danger btn-lg px-5 py-2 shadow-sm rounded-pill"
-                          attrs="{'invisible': ['|',('is_department_approve','=',False),('state', '!=', 'draft')]}"
-                          />
+                          groups="clearance_request.group_department_approval"
+                          states="draft"/>
                   <button name="action_reapprove_department" 
                           type="object" 
-                          string="Approve" 
+                          string="Reapprove Department" 
                           class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill"
                           groups="clearance_request.group_department_approval"
                           attrs="{'invisible': [('department_approval', '!=', 'rejected')]}"/>
@@ -123,19 +112,19 @@
                 <div class="col-md-6 d-flex justify-content-center mt-4">
                   <button name="action_property_approve" 
                           type="object" 
-                          string="Approve" 
+                          string="Approve Property" 
                           class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill"
-                          attrs="{'invisible': ['|',('is_property_approve','=',False),('state', '!=', 'in_progress')]}"
-                          />
+                          groups="clearance_request.group_property_approval"
+                          states="in_progress"/>
                   <button name="action_reject_property" 
                           type="object" 
-                          string="Reject" 
+                          string="Reject Property" 
                           class="btn btn-danger btn-lg px-5 py-2 shadow-sm rounded-pill"
-                           attrs="{'invisible': ['|',('is_property_approve','=',False),('state', '!=', 'in_progress')]}"
-                           />
+                          groups="clearance_request.group_property_approval"
+                          states="in_progress"/>
                   <button name="action_reapprove_property" 
                           type="object" 
-                          string="Approve" 
+                          string="Reapprove Property" 
                           class="btn btn-success btn-sm"
                           groups="clearance_request.group_property_approval"
                           attrs="{'invisible': [('property_approval', '!=', 'rejected')]}"/>
@@ -146,19 +135,19 @@
               <div class="col-md-6 d-flex justify-content-center mt-4">
                 <button name="action_finance_approve" 
                         type="object" 
-                        string="Approve" 
+                        string="Approve Finance" 
                         class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill"
-                        attrs="{'invisible': ['|',('is_finance_approve','=',False),('state', '!=', 'in_progress')]}"
-                        />
+                        groups="clearance_request.group_finance_approval"
+                        states="in_progress"/>
                 <button name="action_reject_finance" 
                         type="object" 
-                        string="Reject" 
+                        string="Reject Finance" 
                         class="btn btn-danger btn-lg px-5 py-2 shadow-sm rounded-pill"
-                        attrs="{'invisible': ['|',('is_finance_approve','=',False),('state', '!=', 'in_progress')]}"
-                        />
+                        groups="clearance_request.group_finance_approval"
+                        states="in_progress"/>
                 <button name="action_reapprove_finance" 
                         type="object" 
-                        string="Approve Finance" 
+                        string="Reapprove Finance" 
                         class="btn btn-success btn-sm"
                         groups="clearance_request.group_finance_approval"
                         attrs="{'invisible': [('department_approval', '!=', 'rejected')]}"/>
@@ -168,14 +157,14 @@
                         type="object" 
                         string="Approve HR" 
                         class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill"
-                        attrs="{'invisible': ['|',('is_hr_approve','=',False),('state', '!=', 'in_progress')]}"
-                        />
+                        groups="clearance_request.group_hr_approval"
+                        states="in_progress"/>
                 <button name="action_reject_hr" 
                         type="object" 
                         string="Reject HR" 
                         class="btn btn-danger btn-lg px-5 py-2 shadow-sm rounded-pill"
-                        attrs="{'invisible': ['|',('is_hr_approve','=',False),('state', '!=', 'in_progress')]}"
-                        />
+                        groups="clearance_request.group_hr_approval"
+                        states="in_progress"/>
                 <button name="action_reapprove_hr" 
                         type="object" 
                         string="Reapprove Hr" 
@@ -186,10 +175,7 @@
                 <button name="action_save_clearance" 
                             type="object" 
                             string="Save" 
-                            class="btn btn-success btn-lg px-5 py-2 shadow-sm rounded-pill"
-                            attrs="{'invisible': ['|', 
-                              ('state', 'in', ['in_progress', 'approved', 'rejected']), 
-                              ('user_in_group', '=', True)]}"/>
+                            class="btn btn-primary btn-lg px-5 py-2 shadow-sm rounded-pill"/>
                   
               </div>
              
