--- a/addons/base_setup/views/res_config_settings_views.xml
+++ b/addons/base_setup/views/res_config_settings_views.xml
@@ -144,9 +144,9 @@
                                         </div>
                                 </div>
                                 <div class="col-xs-12 col-md-6 o_setting_box" title="When populating your address book, Odoo provides a list of matching companies. When selecting one item, the company data and logo are auto-filled." id="partner_autocomplete">
-                                    <div class="o_setting_left_pane">
+                                    <!-- <div class="o_setting_left_pane">
                                         <field name="module_partner_autocomplete"/>
-                                    </div>
+                                    </div> -->
                                     <div class="o_setting_right_pane" id="partner_autocomplete_settings">
                                         <!-- <label for="module_partner_autocomplete"/>
                                         <div class="text-muted">
