--- a/addons/iap/views/res_config_settings.xml
+++ b/addons/iap/views/res_config_settings.xml
@@ -22,16 +22,16 @@ if records:
                         <div class="col-12 col-lg-6 o_setting_box" id="iap_credits_setting">
                             <div class='o_setting_right_pane'>
                                 <div class="o_form_label">
-                                Odoo IAP
-                                <a href="https://www.odoo.com/documentation/16.0/applications/general/in_app_purchase.html" title="Documentation" class="o_doc_link" target="_blank"></a>
-                                <a href="https://www.odoo.com/documentation/16.0/developer/misc/api/iap.html" title="Documentation" class="ms-1 o_doc_link" target="_blank"></a>
+                                <!-- Odoo IAP -->
+                                <!-- <a href="https://www.odoo.com/documentation/16.0/applications/general/in_app_purchase.html" title="Documentation" class="o_doc_link" target="_blank"></a>
+                                <a href="https://www.odoo.com/documentation/16.0/developer/misc/api/iap.html" title="Documentation" class="ms-1 o_doc_link" target="_blank"></a> -->
                                 </div>
-                                <div class="text-muted">
+                                <!-- <div class="text-muted">
                                     View your IAP Services and recharge your credits
-                                </div>
-                                <div class='mt8'>
+                                </div> -->
+                                <!-- <div class='mt8'>
                                     <button name="%(iap.open_iap_account)d" icon="fa-arrow-right" type="action" string="View My Services" class="btn-link"/>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
